--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -79,7 +79,7 @@
                 <h4>2) Zee 5 Premium Account Id & Password :-
 
                 </h4>
-                <a href="https://earnload.co/Netflixnew" class="btn btn-primary mt-2 mb-4">
+                <a href="https://gplinks.co/qlrdt" class="btn btn-primary mt-2 mb-4">
                     <i class=""></i> Download
                 </a>
                 <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- Aap Download button per click
