--- a/templates/views/id&password.hbs
+++ b/templates/views/id&password.hbs
@@ -11,6 +11,8 @@
     <h1 style="color: red;">Zee5 Premium</h1>
     <h2>ID : tushartyagi.89@gmail.com</h2>
     <h2>Password : P@$$w0rd</h2>
+     <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- copy this id and password and login zee5 account in chrome browser 100% work kergi
+     </p>
 </body>
 
 </html>
