--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -42,15 +42,16 @@
             <div class="col-md-12">
                 <h5>Telegram Link :- <a href="https://t.me/BrotherTeamtech">Join here</a></h5>
                 <h5>Instagram Link :- <a href="https://www.instagram.com/brothersteamtech/">Join here</a></h5>
-
-            </div>
-
-            <div > <h3 class="text-center mt-4 mb-4" style="color: blue; font-weight: 800">Premium Account Free</h3>
-                 <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- Freinds in sabhi premium app mein aapko signup or login nahi karna direct chalana hai or jin app mein login or signup karna hoga unki information us app ke important note me mil jayegi. 
+                <div > <h3 class="text-center mt-4 mb-4" style="color: blue; font-weight: 800">Premium Account Free</h3>
+                 <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- Friends in sabhi premium app mein aapko signup or login nahi karna direct chalana hai or jin app mein login or signup karna hoga unki information us app ke important note me mil jayegi. 
                 </p>
 
 
             </div>
+
+            </div>
+
+            
 
         </div>
     </div>
@@ -66,7 +67,7 @@
                 <a href="https://earnload.co/Netflixnew" class="btn btn-primary mt-2 mb-4">
                     <i class=""></i> Download
                 </a>
-                <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- jin freinds ke mobile mein
+                <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- jin friends ke mobile mein
                     Netflix work
                     nahi kar hai bo freind play store super vpn download
                     kare usme <strong>US (United State)</strong> select kare fir netflix ko chalaye 100% work karega
