new id and password zee5

--- a/templates/views/id&password.hbs
+++ b/templates/views/id&password.hbs
@@ -9,11 +9,20 @@
 
 <body>
     <h1 style="color: red;">Zee5 Premium</h1>
-    <h2>ID : tushartyagi.89@gmail.com</h2>
-    <h2>Password : P@$$w0rd</h2>
+    <h2>ID : shravanp675@gmail.com</h2>
+    <h2>Password : 08091987</h2>
+
+    <h2>ID : karanramani79@gmail.com</h2>
+    <h2>Password : shotfire</h2>
+    
+    <h2>ID : rajiv_chandel@hotmail.com</h2>
+    <h2>Password : rashmi@123</h2>
     <p> 🚫🚫 <strong style="color: red;">Important Note </strong> 🚫🚫 :- copy this id and password and login zee5
         account in chrome browser 100% work kergi
     </p>
+     <p> 🚫🚫 <strong style="color: red;">Note : </strong> abhi ye bale id and password ko try kijiye. bahut hi jald hum new id and password update kar denge. iski jankari telegram group me de denge.
+    </p>
+
 </body>
 
 </html>
